# word-piece-tokenizer

./: MANIFEST.in  README.md  pyproject.toml
src/word_piece_tokenizer/: BasicTokenizer.py  Trie.py  WordPieceTokenizer.py  __init__.py  utils.py
tests/: tests.txt  tokenizer_test.py
